# tgwipe

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
tgwipe/: cli.py  config.py
tgwipe/domain/: interfaces.py  models.py
tgwipe/filters/: ai_filter.py  cache.py
tgwipe/service/: wipe.py
tgwipe/telegram/: client.py  deleter.py  fetcher.py
tgwipe/ui/: progress.py
